[workspace]
members = [
    "crates/smbx-core",
    "crates/smbx-net",
    "crates/smbx-scanner",
    "crates/smbx-fingerprint",
    "crates/smbx-vuln",
    "crates/smbx-exploit",
    "crates/smbx-enum",
    "crates/smbx-report",
    "crates/smbx",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SMBX Enterprise Tool"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
bitvec = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
nom = "7.1"
async-trait = "0.1"
toml = "0.8"

# Crate-specific dependencies
smbx-core = { path = "crates/smbx-core" }
smbx-net = { path = "crates/smbx-net" }
smbx-scanner = { path = "crates/smbx-scanner" }
smbx-fingerprint = { path = "crates/smbx-fingerprint" }
smbx-vuln = { path = "crates/smbx-vuln" }
smbx-exploit = { path = "crates/smbx-exploit" }
smbx-enum = { path = "crates/smbx-enum" }
smbx-report = { path = "crates/smbx-report" }
