[package]
name = "smbx-fingerprint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
smbx-core = { workspace = true }
smbx-net = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
