[package]
name = "smbx-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
smbx-core = { workspace = true }
bitvec = { workspace = true }
md5 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
