[package]
name = "smbx-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
smbx-core = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
