[package]
name = "smbx-vuln"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
smbx-core = { workspace = true }
smbx-net = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
